// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionController createSubscription returns BAD_REQUEST on invalidated request 1`] = `Object {}`;

exports[`SubscriptionController createSubscription returns INTERNAL_SERVER_ERROR on bad service 1`] = `
Object {
  "message": "Server Error",
}
`;

exports[`SubscriptionController createSubscription returns OK on valid submission 1`] = `1`;

exports[`SubscriptionController createSubscription returns UNAUTHORIZED on no user 1`] = `
Object {
  "message": "User not signed in",
}
`;
